--- a/packages/pq-account/js/netlify.toml
+++ b/packages/pq-account/js/netlify.toml
@@ -1,6 +1,11 @@
 [build]
   command = "npm install && npm run build"
   publish = "dist"
+  
+[[redirects]]
+  from = "/minimal.html"
+  to = "/minimal.html"
+  status = 200
 
 [[redirects]]
   from = "/*"
