--- a/packages/pq-account/js/netlify.toml
+++ b/packages/pq-account/js/netlify.toml
@@ -2,6 +2,11 @@
   command = "npm install && npm run build"
   publish = "dist"
   
+[[headers]]
+  for = "/*.apdu"
+  [headers.values]
+    Content-Type = "text/plain"
+
 [[redirects]]
   from = "/minimal.html"
   to = "/minimal.html"
